Adding assumptions to each section (not finished)

--- a/hamiltonianQG.tex
+++ b/hamiltonianQG.tex
@@ -15,6 +15,7 @@
 
 %%% Section 1 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{One-Layer Quasi-Geostrophy}
+  \textbf{Assumptions}
 
   The one-layer QG model can be written as,
   $$
@@ -140,6 +141,8 @@
 
 %%% Section 2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Two-Layer Quasi-Geostrophy}
+
+  \textbf{Assumptions}
 
   The two-layer QG model can be written as,
   $$
@@ -299,6 +302,8 @@
 %%% Section 3 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{$N$-Layer Quasi-Geostrophy}
 
+  \textbf{Assumptions}
+
   The $N$-layer QG model can be written as,
   $$
   \partial_t q_i + J(\psi_i, q_i) = 0,
@@ -436,6 +441,8 @@
 
 %%% Section 4 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Shallow Water}
+
+  \textbf{Assumptions}
   The SW model can be written as,
   \begin{align*}
   \partial_t \vec u + (\vec u \cdot \vec \nabla) \vec u + f \hat k \times \vec u &= - g \vec \nabla h, \\
