--- a/hamiltonianQG.tex
+++ b/hamiltonianQG.tex
@@ -240,7 +240,7 @@
       $$
       If $\iint \frac{1}{\alpha_i}\psi_i \nabla^2 \psi_i \, dA = - \iint \frac{1}{\alpha_i} \vec\nabla\psi_i \cdot \vec\nabla\psi_i \, dA$, then we're clearly saying $\oint \frac{1}{\alpha_i}\psi_i \nabla \psi_i\cdot d \vec S = 0$. By Helmholtz's decomposition theorem, the stream function $\psi_i$ is unique up to a divergenceless function, thus $\psi_i$ can differ by a constant and still be a valid stream function for the velocity. As is mentioned in Holm et al. (1985), the boundary conditions for our scenario of interest is $\left. \psi_i \right|_{\partial D} = \,$constant. Since we assume the domain is simply connected, there is only on boundary we are concerned with, and each $\psi_i$ is constant on that boundary. Thus, we are free to assume whatever contant value we like. A natural choice is $\left. \psi_i \right|_{\partial D} = 0$, which automatically implies $\oint \frac{1}{\alpha_i}\psi_i \nabla \psi_i \cdot d \vec S = 0$.
 
-      If the domain was not simply connected, there would be multiple boundaries to deal with. We are allowed to arbitrarily choose a value of $\psi_i$ on one of the boundaries, but this dictates the value of $\psi_i$ on the other boundaries, so the surface integral may be some non-zero value. Assuming a simply connected domain makes this problem disappear.
+      If the domain was not simply connected, there would be multiple boundaries to deal with. We are allowed to arbitrarily choose a value of $\psi_i$ on one of the boundaries, but this dictates the value of $\psi_i$ on the other boundaries, so the surface integral may be some non-zero value. Assuming a simply connected domain makes this problem disappear. This holds true for any simply connected domain, so we do not need to differentiate between periodic boundary conditions, an infinite channel, or some other configuration that is often assumed in literature.
 
   %%% 2.2 --------------------------------------------------------
   \subsection{First Variation}
