Added Poincare inequality bound for second theorem in one layer

--- a/hamiltonianQG.tex
+++ b/hamiltonianQG.tex
@@ -132,8 +132,20 @@
                 \delta^2\mathcal{H}_s
                 &= \iint \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s) (\delta q)^2  \, dA \\
                 &\le \iint \frac{1}{\lambda_{min}}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s) (\delta q)^2  \, dA \\
-                &= \iint (\nabla^2 \delta\psi)^2\left[ \frac1\lambda_{min} + C''(q_s) \right] + (\delta\psi \nabla^2\delta\psi)\left[ -\frac{2f_0^2}{gH}C''(q_s) \right] + (\delta\psi)^2\left[ \frac{f_0^2}{gH} + (\frac{f_0^2}{gH})^2 + C''(q_s) \right] \, dA
+                %&= \iint (\nabla^2 \delta\psi)^2\left[ \frac1\lambda_{min} + C''(q_s) \right] + (\delta\psi \nabla^2\delta\psi)\left[ -\frac{2f_0^2}{gH}C''(q_s) \right] \\
+                %&\quad + (\delta\psi)^2\left[ \frac{f_0^2}{gH} + (\frac{f_0^2}{gH})^2 + C''(q_s) \right] \, dA
             \end{align*}
+            For $\delta^2\mathcal{H}$ to be negative definite, the integrand must be negative everywhere. By factoring this homogeneous polynomial, we find:
+            \begin{align*}
+                C''(q_s) < -\frac{\frac1\lambda_{min}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH}(\delta\psi)^2}{(\delta q)^2}
+            \end{align*}
+            The value of $\lambda_{min}$ will depend on the geometry of the domain. For example, two commonly used domains are the doubly periodic rectangle and an infinite channel in $x$.
+            It can be shown that $\lambda_{min} = 4\pi^2(\frac1L_x + \frac1L_y)$ for the doubly periodic boundary, and $\lambda_{min} = \frac{\pi^2}{W^2}$ for the channel.
+            %\begin{align*}
+            %    C''(q_s) &< \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 < -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
+            %    C''(q_s) &> \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 > -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
+            %    &\text{no restrictions on } C''(q_s) \;&\text{when}\; \frac{2f_0^2}{gH}xy = x^2 + y^2
+            %\end{align*}
         \end{subsubsection}
     \end{subsection}
 
