Updated aside to include doubly periodic and channel boundaries

--- a/hamiltonianQG.tex
+++ b/hamiltonianQG.tex
@@ -262,7 +262,7 @@
             $$
             If $\iint \frac{1}{\alpha_i}\psi_i \nabla^2 \psi_i \, dA = - \iint \frac{1}{\alpha_i} \vec\nabla\psi_i \cdot \vec\nabla\psi_i \, dA$, then we're clearly saying $\oint \frac{1}{\alpha_i}\psi_i \nabla \psi_i\cdot d \vec S = 0$. By Helmholtz's decomposition theorem, the stream function $\psi_i$ is unique up to a divergenceless function, thus $\psi_i$ can differ by a constant and still be a valid stream function for the velocity. If we assume the domain is simply connected and the boundary is smooth everywhere, there is only on boundary we are concerned with, and each $\psi_i$ is constant on that boundary. Thus, we are free to assume whatever contant value we like. A natural choice is $\left. \psi_i \right|_{\partial D} = 0$, which automatically implies $\oint \frac{1}{\alpha_i}\psi_i \nabla \psi_i \cdot d \vec S = 0$.
 
-            If the domain was not simply connected or not smooth, there would be multiple boundaries to deal with. For example, a rectangle is a simply connected domain, but its boundary has corners. The stream function will be constant on each edge, but the value on one edge may be different from the value on another. We are allowed to arbitrarily choose a value of $\psi_i$ on one of the boundaries, but this dictates the value of $\psi_i$ on the others, so the surface integral may be some non-zero value. Assuming a simply connected, smoothly bounded domain makes this problem disappear.
+            If the domain was not simply connected or not smooth, there would be multiple boundaries to deal with. For example, a rectangle is a simply connected domain, but its boundary has corners. The stream function will be constant on each edge, but the value on one edge may be different from the value on another. We are allowed to arbitrarily choose a value of $\psi_i$ on one of the boundaries, but this dictates the value of $\psi_i$ on the others, so the surface integral may be some non-zero value. Assuming a simply connected, smoothly bounded domain, or a domain that has $\oint \frac{1}{\alpha_i}\psi_i \nabla \psi_i\cdot d \vec S = 0$, makes this problem disappear
         \end{subsubsection}
     \end{subsection}
 
