--- a/hamiltonianQG.tex
+++ b/hamiltonianQG.tex
@@ -140,7 +140,7 @@
                 C''(q_s) < -\frac{\frac1\lambda_{min}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH}(\delta\psi)^2}{(\delta q)^2}
             \end{align*}
             The value of $\lambda_{min}$ will depend on the geometry of the domain. For example, two commonly used domains are the doubly periodic rectangle and an infinite channel in $x$.
-            It can be shown that $\lambda_{min} = 4\pi^2(\frac1L_x + \frac1L_y)$ for the doubly periodic boundary, and $\lambda_{min} = \frac{\pi^2}{W^2}$ for the channel.
+            It can be shown that $\lambda_{min} = 4\pi^2(\frac1{L_x^2} + \frac1{L_y^2})$ for the doubly periodic boundary, and $\lambda_{min} = \frac{\pi^2}{W^2}$ for the channel.
             %\begin{align*}
             %    C''(q_s) &< \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 < -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
             %    C''(q_s) &> \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 > -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
