--- a/USRA Presentation/presentation.tex
+++ b/USRA Presentation/presentation.tex
@@ -24,6 +24,12 @@
 
 	\section{Background}
 		\subsection{Shallow Water Model}
+			\begin{frame}[t]{Shallow Water Assumptions}
+				body
+			\end{frame}
+			\begin{frame}[t]{Shallow Water Equations}
+				body
+			\end{frame}
 		\subsection{Hamiltonian Equations}
 
 	\section{Main Work}
